RESOLVED FIXED44521
-webkit-svg-shadow doesn't repaint on changes
https://bugs.webkit.org/show_bug.cgi?id=44521
Summary -webkit-svg-shadow doesn't repaint on changes
Nikolas Zimmermann
Reported 2010-08-24 06:41:10 PDT
-webkit-svg-shadow doesn't repaint, if it got changed. It's just missing in SVGRenderStyle::diff.
Attachments
Patch (46.11 KB, patch)
2010-08-24 06:48 PDT, Nikolas Zimmermann
krit: review+
Nikolas Zimmermann
Comment 1 2010-08-24 06:48:54 PDT
Dirk Schulze
Comment 2 2010-08-24 06:56:16 PDT
Comment on attachment 65269 [details] Patch r=me
Nikolas Zimmermann
Comment 3 2010-08-24 07:02:17 PDT
Landed in r65895.
Note You need to log in before you can comment on or make changes to this bug.