2010-08-24  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        -webkit-svg-shadow doesn't repaint on changes
        https://bugs.webkit.org/show_bug.cgi?id=44521

        Trivial fix, to make -webkit-svg-shadow react on changes.

        Test: svg/css/shadow-changes.svg

        * rendering/style/SVGRenderStyle.cpp:
        (WebCore::SVGRenderStyle::diff): If 'svgShadow' is not equal, cause a repaint.

2010-08-24  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        -webkit-svg-shadow doesn't repaint on changes
        https://bugs.webkit.org/show_bug.cgi?id=44521

        * platform/mac/svg/css/shadow-changes-expected.checksum: Added.
        * platform/mac/svg/css/shadow-changes-expected.png: Added.
        * platform/mac/svg/css/shadow-changes-expected.txt: Added.
        * svg/css/shadow-changes.svg: Added.


Canonical link: https://commits.webkit.org/56674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65895 268f45cc-cd09-0410-ab3c-d52691b4dbfc